src/assets/styles/index.css
:root {
    --appbg0: #860e18; --appfg0: white; --appsg0: rgba(227, 19, 55, 0.37);
    --appbg1: #9d212c; --appfg1: white; --appsg1: rgba(227, 19, 55, 0.37);
    --appbg2: #ffffff;        --appfg2: black;
    --appbg3: #ffffff;        --appfg3: black;
    --appbgbtn1: #2e8336;     --appfgbtn1: white;
    --appbgbtn2: #eab308;     --appfgbtn2: white;

    --appbgowner: #007b00;
    --appbgadmin: #2368D5;
    --appbgmod: #2e8336;

    --appCommunityIconFontSize: 20px;
    --appCommunityIconSize: 52px;
}
body {
    font-family: "Century Schoolbook L", Arial, Helvetica, sans-serif;
}
.appbg0 { background: var(--appbg0); }
.appbg1 { background: var(--appbg1); }
.appbg2 { background: var(--appbg2); }
.appbg3 { background: var(--appbg3); }

.appfg0 { color: var(--appfg0); }
.appfg1 { color: var(--appfg1); }
.appfg2 { color: var(--appfg2); }
.appfg3 { color: var(--appfg3); }

.appsg0 { background: var(--appsg0); }
.appsg1 { background: var(--appsg1); }
.appsg2 { background: var(--appsg1); }
.appsg3 { background: var(--appsg1); }
.apphg2 { background: var(--apphg2); }

.appbgbtn1 { background: var(--appbgbtn1); }
.appbgbtn2 { background: var(--appbgbtn2); }
.appfgbtn1 { color: var(--appfgbtn1); }
.appfgbtn2 { color: var(--appfgbtn2); }

.appfg0 .fg70, .appfg0 .text-gray-700 { color: var(--appfg0); opacity: 0.7; }
.appfg1 .fg70, .appfg1 .text-gray-700 { color: var(--appfg1); opacity: 0.7; }
.appfg2 .fg70, .appfg2 .text-gray-700 { color: var(--appfg2); opacity: 0.7; }
.appfg2 .border-gray-700 { border-color: var(--appfg2) / 0.7; }

.colorowner { color:var(--appbgowner); } 
.coloradmin { color:var(--appbgadmin); } 
.colormod { color:var(--appbgmod); } 

.btn {
    @apply appbgbtn1 appfgbtn1 relative mr-1 my-1 py-1 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white disabled:opacity-75 font-bold;  
}
.btn:before {
    content:" ";
    background:#00000033;
    display:block;
    position:absolute;
    top:0; left:0; right:0; bottom:0;
    opacity:0;
}
.btn:hover:before { opacity:1; }
.btn2 {
  @apply appbgbtn2 appfgbtn2 relative mr-1 my-1 py-1 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white disabled:opacity-75 font-bold;
}
.btn2:before {
    content:" ";
    background:#00000033;
    display:block;
    position:absolute;
    top:0; left:0; right:0; bottom:0;
    opacity:0;
}
.btn2:hover:before { opacity:1; }

.inputText {
    @apply appearance-none block px-1 py-0 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}
.inputText1 {
    @apply appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}

.inputSelect1 {
    @apply px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}

.tab > button {
    @apply mx-1;
    padding: 0px 1px;
    font-weight: bold;
    border-bottom: 5px solid #c7c7c7;
}
.tab > button[aria-selected="true"] {
    /*border-bottom: 5px solid #059669;*/
    border-bottom: 5px solid var(--appbgbtn1);
}
.flipY {
    perspective: 1000px;
}
.flipYItem {
    transition: transform 1.0s;
    transform-style: preserve-3d;
}
.flipY:hover .flipYItem {
    transform: rotateY(180deg);
}
.menu {
    position: fixed;
    z-index: 70;
    color: var(--appfg1);
    background-color: var(--appbg1);
    border: 1px solid #0000002e;
    border-radius:5px;
    font-size: 14px;
    padding: 2px 2px;
    min-width: 100px;
    max-width: 350px;
}
.menu > div { 
    @apply mx-0 px-2 cursor-pointer;
    padding-top: 2px;
    padding-bottom: 2px;
}
.menu > div:hover { 
    background-color: var(--appsg1);
}
.menu .oi { 
    width: 17px;
    margin-left: -2px;
    padding-right: 2px;
}
.tooltip {
    position: fixed;
    z-index: 100;
    color:white;
    background-color:#333333ee;
    border-radius:5px;
    font-size: 14px;
    padding: 2px 7px;
    min-width: 100px;
    max-width: 350px;
}
.md { }
.md p, .md h1, .md h2, .md h3, .md h4, .md h5, .md h6 {
	margin: 0px;
	/*margin: 0 0 .7em 0;*/
}
.md img {
	max-width: 100%;
}
.md code, .md blockquote {
    font-size: 14px;
	border: 1px solid #00000052;
	border-radius: 5px;
	padding: 3px 5px;
	background-color: var(--apphg2);
}
.md pre { white-space: pre-wrap; }
pre > code { display: block; }
.md-list {
	
}
.md-list > span { margin-left: 5px; }
.border-default {
    border: 1px solid #0000002e;
}
.border-default2 {
    border: 1px solid #00000052;
}
.border-r-1 {
    border-right: 1px solid #0000002e;
}
.border-l-1 {
    border-left: 1px solid #0000002e;
}
.border-t-1 {
    border-top: 1px solid #0000002e;
}
.border-b-1 {
    border-bottom: 1px solid #0000002e;
}
.av128 {
    font-size: 45px;
    width: 128px;
    height: 128px;
    min-width: 128px;
    min-height: 128px;
}
.avCommunity {
    font-size: var(--appCommunityIconFontSize);
    width: var(--appCommunityIconSize);
    height: var(--appCommunityIconSize);
    min-width: var(--appCommunityIconSize);
    min-height: var(--appCommunityIconSize);
}
.avMini {
    font-size: 8.5px;
    width: 18px;
    height: 18px;
    min-width: 18px;
    min-height: 18px;
}
.avMessage {
    font-size: 18px;
    width: 41px;
    height: 41px;
    min-width: 41px;
    min-height: 41px;
}
.avConversation {
    font-size: 16px;
    width: 35px;
    height: 35px;
    min-width: 35px;
    min-height: 35px;
}
.avGroup {
    border-radius: 7px !important;
    justify-content: left !important;
    font-size: 12px;
    white-space: pre;
    overflow: hidden;
    padding-left: 3px;
}
.titlebg {
    @apply bg-green-700 pr-1 pl-1 text-white font-bold;
    border-radius: 5px;
    margin-right:2px;
    line-height:1;
    padding: 2px 3px;
}
.scrollBox {
    visibility: hidden;
    transition: visibility 0.20s;
    scrollbar-color: #00000010 #00000000;
    transition: scrollbar-color 200ms;
}
.scrollBox:focus, .scrollBox:hover, .scrollBoxContent {
    visibility: visible;
}
.scrollBox:hover {
    transition: visibility 0s 0.20s;
    scrollbar-color: #00000077 #00000000;
    transition: scrollbar-color 200ms linear;
}
.monoIcon {
    @apply font-mono;
    font-weight: bold;
    font-size: 20px;
    display: inline-block;
    line-height: 1;
}
.infoIcon {
    border-radius: 50px;
    background-color: var(--apphg2);
    width: 18px;
    height: 18px;
    display: inline-block;
    font-size: 13px;
    vertical-align: text-top;
    padding-left: 5px;
    color: var(--appfg2);
    padding-top: 2px;
    position: relative;
    top: 0;
}
.w-200 { width: 200px; }
.mr-5px { margin-right: 5px;}
.oi-x { top: 0px;}
.oiMini:before { font-size: 11px; padding-right: 1px; }

@tailwind base;
@tailwind components;
@tailwind utilities;

hr {
    border-top: 1px solid #0000003d;
    height: 1px;
    width: 100%;
    margin: 3px 0px 0px 0px;
}
.vue-simple-context-menu {
    border: 1px solid #c7c7c7;
    font-family: inherit;
}
.vue-simple-context-menu__item {
    @apply text-sm;
    padding: 3px 10px;
}
.vue-simple-context-menu__item:hover {
  background-color: teal;
  color: #fff;
}

